--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -201,6 +201,17 @@
 }
 
 
+
+/**************** Arabic css ***********************/
+
+.arabic.fullsidebar .sidebar .navmenu li>a .text {
+    margin-left: 0;
+    margin-right: 10px;
+}
+
+
+/******************** Media css  **************************/
+
 @media (max-width:1199px) {
     .fullsidebar .sidebar {
         width: 240px;
