--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -128,6 +128,13 @@ header .rightpart .user p {
     margin-right: 5px;
 }
 
+
+ .dropdownoptbox>button:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+
+
 .fullsidebar header {
     padding-left: 275px;
     -webkit-transition: all .3s ease;
@@ -161,11 +168,6 @@ header .rightpart .user p {
     margin-left: 5px;
     transform: rotate(-180deg);
 }
-
-.arabic .dropdownoptbox>button:not(:last-child) {
-    margin-bottom: 10px;
-}
-
 
 
 
