--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -42,6 +42,9 @@
 .headerbox>ul>li+li {
     margin-left: 25px;
 }
+.languagebox .form-select {
+    box-shadow: none;
+}
 
 .searchbox {
     display: block;
@@ -61,6 +64,12 @@
     padding: 10px 40px 10px 10px;
     font-size: 18px;
 }
+
+.searchbox input[type="search"]::-webkit-search-decoration,
+.searchbox input[type="search"]::-webkit-search-cancel-button,
+.searchbox input[type="search"]::-webkit-search-results-button,
+.searchbox input[type="search"]::-webkit-search-results-decoration { display: none; }
+
 
 .searchbox button {
     border: none;
@@ -394,14 +403,15 @@ font-weight: normal;
     margin: 15px 0 0;
     width: 100%;
     margin-left: auto;
+    height: 85px;
 }
 
 .menuitemlist li .rightpart figure img {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    min-height: 90px;
     display: block;
+    object-fit: cover;
 }
 
 .menulist {
@@ -454,3 +464,46 @@ font-weight: normal;
     border-radius: 10px;
 
 }
+
+
+/***************** Arabic css *****************/
+
+
+.arabic .searchbox input {
+    padding: 10px 10px 10px 40px;
+}
+.arabic .searchbox button {
+    right: auto;
+    left: 10px;
+}
+.arabic .itemlistbtn li {
+    margin-right:0;
+    margin-left:10px;
+}
+
+.arabic .itemlistbtn li .icon {
+    margin-right: 0px;
+    margin-left: 5px;
+} 
+
+.arabic .startxt img {
+    margin-right: 0;
+    margin-left: 5px;
+}
+
+.arabic .spbtn>img {
+    margin-right: 0;
+    margin-left: 10px;
+}
+
+.arabic .menuitemlist li .leftpart {
+    padding-left: 5px;
+    padding-right: 0px;
+}
+
+.arabic .menuitemlist li .rightpart {
+    padding-right: 5px;
+    padding-left: 0px;
+}
+
+
