--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -1,8 +1,8 @@
 .menupage {
     width: 100%;
     margin: 0 auto;
-    max-width: 400px;
-    padding: 10px;
+    max-width: 500px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -14,11 +14,13 @@
     /* z-index: 99; */
     /* background: #fff; */
     /* width: 380px; */
-  }
-  .menuitemtabsection {
+}
+
+.menuitemtabsection {
     /* padding-top: 192px; */
 }
-.specialbox{
+
+.specialbox {
     /* padding-top: 192px; */
 }
 
@@ -26,8 +28,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     width: 100%;
+    padding: 0 15px;
 }
 
 .headerbox>ul {
@@ -42,6 +44,7 @@
 .headerbox>ul>li+li {
     margin-left: 25px;
 }
+
 .languagebox .form-select {
     box-shadow: none;
 }
@@ -49,9 +52,9 @@
 .searchbox {
     display: block;
     position: relative;
-    margin-top: 25px;
-    width: 100%;
-    /* padding-bottom: 25px; */
+    margin: 25px auto;
+    width: calc(100% - 30px);
+
 }
 
 .searchbox input {
@@ -68,7 +71,9 @@
 .searchbox input[type="search"]::-webkit-search-decoration,
 .searchbox input[type="search"]::-webkit-search-cancel-button,
 .searchbox input[type="search"]::-webkit-search-results-button,
-.searchbox input[type="search"]::-webkit-search-results-decoration { display: none; }
+.searchbox input[type="search"]::-webkit-search-results-decoration {
+    display: none;
+}
 
 
 .searchbox button {
@@ -91,8 +96,8 @@
 .categorylist h2 {
     color: #000;
     font-size: 18px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.2;
     margin-bottom: 15px;
 }
@@ -111,8 +116,8 @@ font-weight: normal;
 .categorylist ul li {
     border-radius: 1000px;
     font-size: 14px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 18px;
     text-align: center;
     background-color: #f7f7fa;
@@ -160,8 +165,8 @@ font-weight: normal;
 .categorylist ul li h3 {
     color: #000;
     font-size: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1;
     margin: 5px 0 5px;
     text-align: center;
@@ -188,25 +193,31 @@ font-weight: normal;
     /* */
 }
 
+.line {
+    height: 6px;
+    width: 100%;
+    background-color: #F7F7FA;
+}
 
 .itemmenu h2 {
     color: #000;
     /* font-family: 'Playfair Display', serif; */
     font-size: 32px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.2;
 }
 
 .itemlistbtn {
-     display: flex;
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 20px 0 0px;
-    padding: 20px 0;
-    border-top: 6px solid #F7F7FA;
-    border-bottom: 6px solid #F7F7FA;
+    margin: 0 0px;
+    padding: 20px 15px;
+    padding-left: 15px !important;
+    /* border-top: 6px solid #F7F7FA; */
+    /* border-bottom: 6px solid #F7F7FA;     */
 }
 
 .itemlistbtn li {
@@ -215,8 +226,8 @@ font-weight: normal;
     color: #000;
     font-size: 12px;
     font-style: normal;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     transition: all .3s;
     padding: 6px 15px;
     white-space: nowrap;
@@ -224,8 +235,9 @@ font-weight: normal;
     margin-right: 10px;
 
 }
-.itemlistbtn .crossbtn{
-font-size: 15px;
+
+.itemlistbtn .crossbtn {
+    font-size: 15px;
 }
 
 .itemlistbtn li span {
@@ -235,13 +247,12 @@ font-size: 15px;
 .itemlistbtn li .icon {
     margin-right: 5px;
 }
-.itemlistbtn li .crossbtn{
+
+.itemlistbtn li .crossbtn {
     margin-left: 10px;
 }
 
-.itemlistbtn>li+li {
-    
-}
+.itemlistbtn>li+li {}
 
 .itemlistbtn li:hover,
 .itemlistbtn li.active {
@@ -250,31 +261,33 @@ font-size: 15px;
     color: #fff;
     cursor: pointer;
 }
-.MenuItemActive{
+
+.MenuItemActive {
     transition: all .3s !important;
     background: #EA6A12 !important;
     color: #fff !important;
     cursor: pointer;
 }
 
-.bestcallerBackgroun{
+.bestcallerBackgroun {
     background-color: #eebe37;
 }
 
-.bestcallerBackgrounveg{
+.bestcallerBackgrounveg {
     background-color: #42B856;
 }
 
-.bestcallerBackgrounNonveg{
+.bestcallerBackgrounNonveg {
     background-color: #EC4646;
 }
 
 .menuitemtab {
     margin: 20px 0 0;
-    border-bottom: 6px solid #F7F7FA;
+    /* border-bottom: 6px solid #F7F7FA; */
     overflow: auto;
-    height: calc(100vh - 255px);
-    padding-right: 4px;
+    height: calc(100vh - 278px);
+    padding-right: 0px;
+    padding-left: 0px;
     position: relative;
 }
 
@@ -286,18 +299,32 @@ font-size: 15px;
 
 .menuitemtab h2 {
     font-size: 18px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 32px;
     letter-spacing: 0.02em;
     text-align: center;
     margin-bottom: 0;
 }
+
+.menuitemtab .accordion-item .accordion-header .accordion-button span {
+    transition: all .3s ease;
+}
+
+
+.menuitemtab .accordion-item .accordion-header .accordion-button.collapsed span {
+    transform: rotate(180deg);
+    transition: all .3s ease;
+}
+
+
 .menuitemtab .accordion-item {
     border: none;
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
     border-bottom: 3px solid #F7F7FA;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .menuitemtab .accordion-item .accordion-header .accordion-button {
@@ -311,6 +338,7 @@ font-weight: normal;
 .menuitemtab .accordion-item .accordion-header .accordion-button::after {
     display: none;
 }
+
 .menuitemtab .accordion-item .accordion-header .accordion-button {
     display: block;
     width: 100%;
@@ -329,7 +357,8 @@ font-weight: normal;
     justify-content: space-between;
     padding: 20px 0;
 }
-.menuitemlist li:not(:last-child){
+
+.menuitemlist li:not(:last-child) {
     border-bottom: 1px solid #F4F0F0;
 }
 
@@ -358,8 +387,8 @@ font-weight: normal;
 .menuitemlist li .leftpart h3 {
     color: #000;
     font-size: 14px;
-   font-family: 'NeuzeitGro-Bol';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Bol';
+    font-weight: normal;
     line-height: 1.2;
     margin: 10px 0;
 }
@@ -367,8 +396,8 @@ font-weight: normal;
 .menuitemlist li .leftpart p {
     color: #5F5F5F;
     font-size: 12px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     margin-bottom: 10px;
     line-height: 1.5;
 }
@@ -377,8 +406,8 @@ font-weight: normal;
 .startxt {
     color: #000;
     font-size: 14px;
-   font-family: 'NeuzeitGro-Reg';
-font-weight: normal;
+    font-family: 'NeuzeitGro-Reg';
+    font-weight: normal;
     line-height: 1.5;
 }
 
@@ -387,7 +416,7 @@ font-weight: normal;
 }
 
 .menuitemlist li .rightpart {
-    width: 40%;
+    width: 30%;
     text-align: right;
     padding-left: 5px;
 }
@@ -437,13 +466,15 @@ font-weight: normal;
     color: #fff;
     line-height: 2;
 }
-.menulist>ul>li> a {
+
+.menulist>ul>li>a {
     color: #fff;
     display: block;
     text-decoration: none;
 }
-.menulist > ul > li > a:hover,
-.menulist > ul > li > a.active { 
+
+.menulist>ul>li>a:hover,
+.menulist>ul>li>a.active {
     color: #EA6A12;
 }
 
@@ -453,15 +484,29 @@ font-weight: normal;
 
 
 .menuitemtab::-webkit-scrollbar {
-    width: 2px;
-    background-color: #EA6A12;
+    /* width: 2px;
+    background-color: #fff;
+    border: 1px solid #8a8a8a;
+    box-shadow: 0 0 1px #8a8a8a;
     border-radius: 10px;
-    padding: 0 1px;
+    padding: 0 1px; */
+    /* width: 2px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.3); */
+
+    width: 2px;
+    background-color: #EF9456B2;
+    border-radius: 100px;
 }
 
-.menuitemtab::-webkit-scrollbar-thumb {    
-    background-color: #000;
-    border-radius: 10px;
+.menuitemtab::-webkit-scrollbar-thumb {
+    /* background-color: #EA6A12;
+    border-radius: 10px; */
+    /* border-radius: 5px;
+  background: linear-gradient(90.18deg, #8ec22c 2.36%, #379640 99.96%); */
+    /* width: 5px; */
+    background-color: #c65b13b2;
+    border-radius: 100px;
 
 }
 
@@ -472,19 +517,21 @@ font-weight: normal;
 .arabic .searchbox input {
     padding: 10px 10px 10px 40px;
 }
+
 .arabic .searchbox button {
     right: auto;
     left: 10px;
 }
+
 .arabic .itemlistbtn li {
-    margin-right:0;
-    margin-left:10px;
+    margin-right: 0;
+    margin-left: 10px;
 }
 
 .arabic .itemlistbtn li .icon {
     margin-right: 0px;
     margin-left: 5px;
-} 
+}
 
 .arabic .startxt img {
     margin-right: 0;
@@ -505,5 +552,3 @@ font-weight: normal;
     padding-right: 5px;
     padding-left: 0px;
 }
-
-
