--- a/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
+++ b/src/Components/DashboardComponents/DashboardHeader/dashboardHeader.css
@@ -43,6 +43,82 @@ header .rightpart {
     align-items: center;
 }
 
+.languaselist {
+    margin-right: 10px;
+    position: relative;
+    z-index: 1;
+}
+
+.languaselist>button {
+    
+    outline: none;
+    box-shadow: none;
+    color: #EA6A12;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: 0.325px;
+    display: inline-block;
+    margin-left: 8px;
+    border-radius: 563.025px;
+    border: 1px solid #EA6A12;
+    background: #FFF;
+    padding: 10px 30px 10px 40px;
+    position: relative;
+    margin: 0;
+    z-index: 1;
+}
+
+.languaselist>button::after{
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 7px;
+    width: 10px;
+    height: 10px ;
+    border-width:0 0 10px 10px;
+    border-style: solid;
+    border-color:transparent transparent #EA6A12   transparent  ;
+    transform: rotate(45deg);
+}
+
+.languaselist>.globeimg {
+    position: absolute;
+    top: 9px;
+    left: 10px;
+    z-index: 2;
+}
+
+.languaselist > ul {
+    /* box-shadow: 0 0 4px #393939; */
+    width: 100%;
+    position: absolute;
+    top: 39px;
+    left: 0;
+    border-radius: 10px;
+    background: #FFF;
+    overflow: hidden;
+    margin: -25px 0 0 0;
+    border: 1px solid #EA6A12;
+    padding-top: 24px;
+}
+
+.languaselist > ul li {
+    color: #000;
+    padding: 10px 8px;
+    cursor: pointer;
+font-size: 13px;
+font-weight: 400;
+line-height: 1;
+letter-spacing: 0.26px;
+}
+.languaselist > ul li:hover{
+    color: #fff;
+    background-color: #EA6A12;
+}
+
+
+
 header .rightpart .user {
     display: flex;
     align-items: center;
@@ -55,7 +131,6 @@ header .rightpart .user figure {
     height: 40px;
     border-radius: 50%;
     margin: 0 10px 0 0;
-
 }
 
 header .rightpart .user .userinfo {
@@ -135,7 +210,7 @@ header .rightpart .user p {
 }
 
 
- .dropdownoptbox>button:not(:last-child) {
+.dropdownoptbox>button:not(:last-child) {
     margin-bottom: 10px;
 }
 
@@ -175,10 +250,11 @@ header .rightpart .user p {
     transform: rotate(-180deg);
 }
 
-.arabic header .rightpart > button.me-3 {
+.arabic header .rightpart>button.me-3 {
     margin-right: 0 !important;
     margin-left: 10px;
 }
+
 .arabic .dropdownopt {
     margin: 12px 10px 0 0px;
 }
