--- a/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
+++ b/src/Components/DashboardComponents/RestaurantDetail/restaurantdetail.css
@@ -7,6 +7,7 @@
 .editprofileform {
     position: relative;
     z-index: 9;
+   
 }
  .burgerimg{
     position: fixed;
@@ -53,7 +54,7 @@
     height: 90px;
     border-radius: 50%;
 }
-.numbersdds{
+.editprofileform  .numbersdds{
     cursor: not-allowed;
 background-color: #80808029; 
 padding-bottom: 10px;
@@ -92,6 +93,13 @@ padding-bottom: 10px;
     left: 0;
     transform: rotateY(180deg);
 }
+
+.arabic .fullsidebar .navmenu li>a .text {
+    margin-left:0;
+    margin-right: 10px;
+}
+
+
 
 
 
