--- a/src/Components/DashboardComponents/Dashboard/dashboard.css
+++ b/src/Components/DashboardComponents/Dashboard/dashboard.css
@@ -242,7 +242,8 @@
   margin: 20px 0 0;
 }
 
-.topdishestabpart .tab-content ul {
+.topdishestabpart .tab-content ul { 
+  margin-top: 20px !important;
   margin: 0;
   padding: 0;
   display: flex;
