--- a/src/Components/DashboardComponents/Categories/categories.css
+++ b/src/Components/DashboardComponents/Categories/categories.css
@@ -307,7 +307,9 @@
 
 .categorypage .topdishestabpart nav > .nav > .swiper {
   padding-top: 40px;
-  margin-top: -40px;
+  /* margin-top: -40px; */
+
+  margin-top: -22px;
 }
 
  
