--- a/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
+++ b/src/Components/DashboardComponents/DashboardSidebar/dashboardSidebar.css
@@ -106,18 +106,23 @@
     transition: all .3s ease;
 }
 
+/*************************** scrollbar css start ***************************/
 
-.dasboardbody .contentpart::-webkit-scrollbar {
+.dasboardbody .contentpart::-webkit-scrollbar,
+.addmenupopup .popupinnerbox .popupbody::-webkit-scrollbar  {
     width: 5px;
     background-color: #EF9456B2;
     border-radius: 100px;
 }
 
-.dasboardbody .contentpart::-webkit-scrollbar-thumb {
+.dasboardbody .contentpart::-webkit-scrollbar-thumb,
+.addmenupopup .popupinnerbox .popupbody::-webkit-scrollbar-thumb  {
     width: 5px;
     background-color: #c65b13b2;
     border-radius: 100px;
 }
+
+/*************************** scrollbar css end ***************************/
 
 
 .fullsidebar .sidebar {
