--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -513,6 +513,9 @@
 
 /***************** Arabic css *****************/
 
+.arabic .headerbox .languaselist {
+    margin: 0;
+}
 
 .arabic .searchbox input {
     padding: 10px 10px 10px 40px;
@@ -527,6 +530,7 @@
     margin-right: 0;
     margin-left: 10px;
 }
+
 
 .arabic .itemlistbtn li .icon {
     margin-right: 0px;
