--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -1,27 +1,11 @@
 .menupage {
     width: 100%;
     margin: 0 auto;
-    max-width: 500px;
+    max-width: 1100px;
     padding: 10px 0px;
     display: flex;
     flex-direction: column;
     position: relative;
-}
-
-.hadertopbar {
-    /* position: fixed; */
-    /* top: 0; */
-    /* z-index: 99; */
-    /* background: #fff; */
-    /* width: 380px; */
-}
-
-.menuitemtabsection {
-    /* padding-top: 192px; */
-}
-
-.specialbox {
-    /* padding-top: 192px; */
 }
 
 .headerbox {
@@ -32,7 +16,31 @@
     padding: 0 15px;
 }
 
-.headerbox>ul {
+.headerbox .languaselist {
+    margin-right: 0;
+}
+
+.headerbox .languaselist>.globeimg {
+    top: 7px;
+    left: 5px;
+}
+
+.headerbox .languaselist>button {
+    font-size: 14px;
+    padding: 10px 25px 10px 35px;
+}
+
+.headerbox .languaselist>button::after {
+    top: 9px; 
+}
+
+.headerbox .languaselist>button {
+    font-size: 14px;
+    padding: 10px 20px 10px 30px;
+    width: 115px;
+    text-align: left;
+}
+.headerbox > ul {
     padding: 0;
     margin: 0;
     list-style: none;
@@ -50,11 +58,10 @@
 }
 
 .searchbox {
-    display: block;
+    display: block; 
     position: relative;
     margin: 25px auto;
     width: calc(100% - 30px);
-
 }
 
 .searchbox input {
@@ -183,14 +190,6 @@
     height: 4px;
     border-radius: 5px;
     background-color: #aeaeae;
-}
-
-
-.itemmenu {
-    /* margin: 20px 0 0; */
-    /* padding-top: 5px; */
-    /* border-top: 6px solid #F7F7FA; */
-    /* */
 }
 
 .line {
@@ -356,6 +355,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px 0;
+    min-height: 137px;
 }
 
 .menuitemlist li:not(:last-child) {
@@ -484,26 +484,12 @@
 
 
 .menuitemtab::-webkit-scrollbar {
-    /* width: 2px;
-    background-color: #fff;
-    border: 1px solid #8a8a8a;
-    box-shadow: 0 0 1px #8a8a8a;
-    border-radius: 10px;
-    padding: 0 1px; */
-    /* width: 2px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background: rgba(0, 0, 0, 0.3); */
-
     width: 2px;
-    background-color: #EF9456B2;
+    background-color: #0000;
     border-radius: 100px;
 }
 
 .menuitemtab::-webkit-scrollbar-thumb {
-    /* background-color: #EA6A12;
-    border-radius: 10px; */
-    /* border-radius: 5px;
-  background: linear-gradient(90.18deg, #8ec22c 2.36%, #379640 99.96%); */
     /* width: 5px; */
     background-color: #c65b13b2;
     border-radius: 100px;
@@ -556,3 +542,58 @@
     padding-right: 5px;
     padding-left: 0px;
 }
+
+
+
+/******************* media css *********************/
+
+@media(min-width:768px){
+
+    
+
+    .itemlistbtn li {
+        font-size: 16px;        
+    }
+    
+    .menuitemtab h2{
+        font-size: 28px;
+    }
+
+    .menuitemlist li .leftpart h3 {
+        font-size: 20px;
+    }
+
+    .menuitemlist li .leftpart p {
+        font-size: 16px;
+    }
+
+    .startxt {
+        font-size: 18px;   
+    }
+
+    .menuitemlist li .rightpart .pricetext {
+        font-size: 18px;
+    }
+
+    .menuitemlist li .rightpart figure {
+        height: 150px;
+        max-width: 200px;
+    }
+
+
+}
+
+
+@media(max-width:450px){
+    .headerbox .logo {
+        max-width: 160px;
+    }
+
+    .headerbox .logo img {
+        width: 100%;
+    }
+
+    
+}
+
+
